--- a/Azure/SimpleStats/SimpleStatsTest/SimpleStatsTest.csproj
+++ b/Azure/SimpleStats/SimpleStatsTest/SimpleStatsTest.csproj
@@ -72,12 +72,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="StorageEntityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SimpleStats.Data\SimpleStats.Engine.csproj">
+      <Project>{611b9471-3fe5-4421-8128-c8f632ba5d15}</Project>
+      <Name>SimpleStats.Engine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SimpleStats.Storage\SimpleStats.Storage.csproj">
+      <Project>{a10c88bf-40a1-4620-8ca7-d33a93d5e410}</Project>
+      <Name>SimpleStats.Storage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
